# temporal-dynamic-pipeline

./: .gitignore  README.md  pyproject.toml
channels/: starter.py
clients/: lookup.py  pipeline.py
messaging/: commands.py  queries.py  workflows.py
workers/: ci.py
workflows/: README.md  activities.py  deploy.py  pyproject.toml
workflows/clients/: lookup.py  pipeline.py
workflows/messaging/: commands.py  values.py  workflows.py
