[tool.poetry]
name = "ci-poc"
version = "0.1.0"
description = ""
authors = ["Mike Nichols <mike.nichols@temporal.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
temporalio = "^1.5.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.981"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"
frozenlist = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

